--- a/.github/workflows/test-action-qat.yml
+++ b/.github/workflows/test-action-qat.yml
@@ -25,8 +25,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
       - uses: oNaiPs/secrets-to-env-action@v1
         with:
           secrets: ${{ toJSON(secrets) }}
+      
+      - uses: oNaiPs/secrets-to-env-action@v1
+        with:
+          vars: ${{ toJSON(vars) }}
+          
       - run: echo "Value of TEST_SECRET:$TEST_SECRET"
+      
       - run: echo "Value of TEST_VAR:$TEST_VAR"
