--- a/.github/workflows/test-action-qat.yml
+++ b/.github/workflows/test-action-qat.yml
@@ -32,7 +32,7 @@ jobs:
       
       - uses: oNaiPs/secrets-to-env-action@v1
         with:
-          vars: ${{ toJSON(vars) }}
+          secrets: ${{ toJSON(vars) }}
           
       - run: echo "Value of TEST_SECRET:$TEST_SECRET"
       
