--- a/.github/workflows/test-action-qat.yml
+++ b/.github/workflows/test-action-qat.yml
@@ -2,7 +2,7 @@
 
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI qat
 
 # Controls when the workflow will run
 on:
