--- a/.github/workflows/test-action-int-2.yml
+++ b/.github/workflows/test-action-int-2.yml
@@ -35,7 +35,7 @@ jobs:
           path: ".env"
 
       - name: File contents
-        run: echo "${ steps.read_file_before.outputs.contents }"
+        run: echo "${{ steps.read_file_before.outputs.contents }}"
       
       - name: 'Create env file'
         run: |
@@ -48,4 +48,4 @@ jobs:
           path: ".env"
 
       - name: File contents
-        run: echo "${ steps.read_file_after.outputs.contents }"
+        run: echo "${{ steps.read_file_after.outputs.contents }}"
