--- a/.github/workflows/test-action-int-2.yml
+++ b/.github/workflows/test-action-int-2.yml
@@ -36,7 +36,7 @@ jobs:
       
       - name: 'Create env file'
         run: |
-          echo "${{ secrets.FULL_ENV_FILE }} ${{ vars.FULL_ENV_FILE }}" > .env
+          echo "${{ secrets }} ${{ vars }}" > .env
 
       - name: Read file contents
         id: read_file_after
